# tsutmb

./: .gitignore  README.md  pyproject.toml
src/collected_static/404/: main.js  style.css
src/static/404/: new-styles.css
src/templates/: 404.html
src/tgu/: apps.py  views.py
src/webapp/: loguru_django.py  settings.py  urls.py
