[tool.poetry]
name = "tsutbm"
authors = ["Vladimir <fourwordsallcaps.ru>"]
version = "1.3.0"
description = "ТГУ им. Г. Р. Державина"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
django = "4.2.1"
whitenoise = "6.9.0"
django-debug-toolbar = "4.1.0"
django-json-widget = "1.1.1"
pydantic = "^2.6.4"
pydantic-settings = "2.3.1"
loguru = "^0.7.2"
gunicorn = "20.1.0"
pillow = "^10.2.0"
psycopg = "3.1.19"
environs = "11.0.0"
orjson = "^3.10.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
